<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">365Live</string>
    <string name="loading">Loading</string>
    <string name="login">Login</string>
    <string name="current_location">Getting Location…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">21</string>
    <string name="date_name">Oct</string>
    <string name="attendEvent">42 + Going</string>
    <string name="eventName">St. Kitts National Carnival</string>
    <string name="eventTime">Event Time</string>
    <string name="allaccessevents">\@allaccessevents</string>
    <string name="address">B/16, New Delhi, India</string>
    <string name="distance">100 Miles</string>
    <string name="please_login">Please Login to view\nrecommendation</string>
    <string name="or">OR</string>
    <string name="select_popular_event">Select Tags to populate events\nrelated to tag</string>
    <string name="please_login_rsvp">Please Login</string>
    <string name="rsvp_ticket">RSVP / Tickets</string>
    <string name="rsvp_note">We can\'t quite find your guest invitations or bookings without\nyour help.</string>
    <string name="event_note">For Events hosting and listing,\nPlease download 365 Live host or\ngo to www.365live.com</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="donot_have_account">Don\'t have account?</string>
    <string name="register">Register</string>
    <string name="or_connect">Or connect with</string>
    <string name="please_enter_email">Email</string>
    <string name="name" tools:ignore="ExtraTranslation">Name</string>
    <string name="rest_password">Reset Password</string>
    <string name="please_enter_new_pass">Please enter your new password for\nyour account</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="sms_verification">Sms Verification</string>
    <string name="please_enter_mobile">Please enter mobile number, we will send you code to verify.</string>
    <string name="_continue">Continue</string>
    <string name="skip">Skip</string>
    <string name="sms_verification_note">* You will be required to complete sms verification later when you start booking with 365Live.</string>
    <string name="verify_code">Verify Code</string>
    <string name="please_enter_otp">Enter 4 digit code that sent to you mobile phone number</string>
    <string name="verify">Verify</string>
    <string name="resend_code">Resend Code in 0:30</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="please_check_email">Please check email and confirm by clicking the link in your email</string>
    <string name="resend_email">Resend Email</string>
    <string name="you_info">Your Info</string>
    <string name="please_update_your_info">Please Update your Info</string>
    <string name="_address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="enter_name">Name</string>
    <string name="enter_your_add">Address</string>
    <string name="enter_your_state">State</string>
    <string name="enter_your_city">City</string>
    <string name="enter_your_zip">Zip Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="user_name">Lita Marshal</string>
    <string name="home">Home</string>
    <string name="home_notification">home_notification</string>
    <string name="search_events">Search Events</string>
    <string name="notification">Notifications</string>
    <string name="message">Messages</string>
    <string name="wish_list">Wish List</string>
    <string name="preference">Preferences</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="invite_msg">Invited you to attend the event Alpha Bravo Chalie</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="ago_time">2 min ago</string>
    <string name="profile">Profile</string>
    <string name="profile_details">Profile Details</string>
    <string name="_url">URL</string>
    <string name="short_info">About</string>
    <string name="update">Update</string>
    <string name="lets_find_something_to_fun">Let\'s find something fun to do</string>
    <string name="search">Search...</string>
    <string name="featured_event">Featured Events</string>
    <string name="where">Where?</string>
    <string name="anywhere">Anywhere</string>
    <string name="recent_search">Recent Search</string>
    <string name="recent_search_name">Johny Dicasta</string>
    <string name="explore_events">Explore Events</string>
    <string name="food">Food</string>
    <string name="event_title">Event Title</string>
    <string name="_date">14, Sep, 2018</string>
    <string name="ticket_msg">VIP Ticket $1,140</string>
    <string name="my_wish_list">My Wish List</string>
    <string name="select_issue">Select Issue</string>
    <string name="type_your_msg">Type your message</string>
    <string name="send">Send</string>
    <string name="account_settings">Account Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="account">Account</string>
    <string name="event_reminder">Event Reminder</string>
    <string name="event_notification">Event Notification</string>
    <string name="share">Share</string>
    <string name="social">Social</string>
    <string name="connect_your_social_account">Connect your Social Accounts</string>
    <string name="other">Others</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="logout">Log Out</string>
    <string name="_distance">Distance</string>
    <string name="distance_in_number">0</string>
    <string name="looking_into">Looking Into</string>
    <string name="category">Category</string>
    <string name="when">When?</string>
    <string name="rupee">$10000</string>
    <string name="admission_cost">Admission Cost</string>
    <string name="free">Free</string>
    <string name="views">Views</string>
    <string name="lets_do_it">Let\'s do it!</string>
    <string name="event_location">Select Address</string>
    <string name="add_review">Add Review</string>
    <string name="type_your_comments">Type your comments...</string>
    <string name="hosted_by">Hosted by</string>
    <string name="hosted_name">Hosted Name</string>
    <string name="rating_count">(102)</string>
    <string name="event_start">Event Start</string>
    <string name="full_date">14 Sep</string>
    <string name="event_end">Event End</string>
    <string name="share_event">Share Event</string>
    <string name="add_to">Add to</string>
    <string name="tag">Tags</string>
    <string name="religious">Religious</string>
    <string name="new_year">New Year</string>
    <string name="party">Party</string>
    <string name="description">Description</string>
    <string name="map">Map</string>
    <string name="gallery">Gallery</string>
    <string name="_add_review">Add a Review</string>
    <string name="reviews">Reviews</string>
    <string name="see_more">See More</string>
    <string name="related_events">Related Events</string>
    <string name="interested">Interested? Let\'s do it</string>
    <string name="your_ticket">Your Ticket</string>
    <string name="total_price">Total Price</string>
    <string name="regular_ticket">Regular Ticket</string>
    <string name="vip_table_seating">vipTableSeating</string>
    <string name="vip_ticket">VIP Ticket</string>
    <string name="other_more_rupee">+ $30.76 Fee</string>
    <string name="number">00</string>
    <string name="regular">Regular</string>
    <string name="regular_group">Regular Group</string>
    <string name="checkout">Checkout</string>
    <string name="choose_payment_mothod">Choose Payment Method</string>
    <string name="please_choose_payment_option">Please choose any one of the following payment method to proceed.</string>
    <string name="stripe">Stripe</string>
    <string name="pay_now">Pay Now</string>
    <string name="paypal">Paypal</string>
    <string name="event_list">Event List</string>
    <string name="ok">OK</string>
    <string name="connection">Please check your internet connection.</string>
    <string name="something_wrong">Something went wrong, please try again later.</string>
    <string name="txt_see_more">See More</string>
    <string name="txt_see_less">See Less</string>
    <string name="check_network">No Internet Connection</string>
    <string name="try_again">Something went wrong, please try again...</string>
    <string name="default_media_location_folder">Live365</string>
    <string name="error_connection">Please check your internet connection.</string>
    <string name="error_auth_failed">Authentication Failed</string>
    <string name="error_auth_cancelled">Authentication Cancelled</string>
    <string name="error_something_wrong">Something went wrong, please try again later.</string>
    <string name="error_coming_soon">Coming Soon</string>
    <string name="error_please_enter_valid">Please enter valid email</string>
    <string name="error_about_yourself">Please add something about yourself.</string>
    <string name="error_valid">Please provide valid %1$s</string>
    <string name="error_valid_password">Please enter a %1$s Min 6 char, 1 letter &amp; 1 number </string>
    <string name="error_password_toshort">%1$s too short, min 6 character </string>
    <string name="error_password_short">Password should be at least 6 characters long.</string>
    <string name="error_confirm_password_short">Confirm Password should be at least 6 characters long.</string>
    <string name="error_name_to_long">%1$s too long, max %2$d characters</string>
    <string name="error_name_to_short">%1$s too short, min %2$d characters</string>
    <string name="error_otp_toshort">%1$s too short, min 4 character </string>
    <string name="error_name_toshort">%1$s too short, min 3 character </string>
    <string name="error_pass_match">Password and confirm password does not match.</string>
    <string name="forgot_password_text">FORGOT PASSWORD</string>
    <string name="please_enter_your_email">Please enter your email and we will send you instructions to securely reset your password.</string>
    <string name="error_please_enter_name">Please enter name</string>
    <string name="error_please_enter_password">Please enter password</string>
    <string name="please_enter_valid_name">Please enter valid name</string>
    <string name="error_please_enter_valid_no">Please enter valid number</string>
    <string name="error_please_enter_first_name">Please enter first name</string>
    <string name="verify_your_email">Verify Your Email</string>
    <string name="enter_4_digit_code">Enter 4 digit code that sent to your mail</string>
    <string name="is_from_register_activity">isFromRegisterActivity</string>
    <string name="is_from_sms_verification_activity">isFromSmsVerificationActivity</string>
    <string name="no_internet_conn">No Internet Connection!</string>
    <string name="ticket_price">Ticket Price</string>
    <string name="select_people">Select People\'s\nSection</string>
    <string name="accepted">Accepted</string>
    <string name="internet_down">You internet connection is down\nplease fix it, you can continue using.</string>
    <string name="retry">Retry</string>
    <string name="ticketName">Ticket Name</string>
</resources>