<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/no_internet_bg"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="@dimen/_16sdp"
        android:layout_centerInParent="true"

        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_plug"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_internet_conn"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/colorSmoothBlack"
            android:fontFamily="@font/caros"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/internet_down"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/light_gray"
            android:fontFamily="@font/caros"
            android:gravity="center"/>



        <Button
            android:id="@+id/btnRetry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:background="@drawable/rectangular_btn_ripple_effect"
            android:fontFamily="@font/caros_medium"
            android:text="@string/retry"
            android:textAllCaps="false"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/color_too_light_gray"

            />









    </LinearLayout>

</RelativeLayout>