<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/vipRegularContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTicketName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticketName"
                android:textSize="@dimen/_18sdp"
                android:textColor="@color/colorSmoothBlack"
                android:fontFamily="@font/caros"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginLeft="@dimen/_8sdp"/>


            <TextView
                android:id="@+id/tvTicketPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticket_price"
                android:fontFamily="@font/caros"
                android:textColor="@color/colorPrimary"
                android:layout_below="@+id/tvTicketName"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginLeft="@dimen/_8sdp"/>

            <TextView
                android:id="@+id/tvTicketDes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:fontFamily="@font/caros"
                android:layout_below="@+id/tvTicketPrice"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginLeft="@dimen/_8sdp"/>


            <TextView
                android:id="@+id/tvSelectPersonTicket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_people"
                android:fontFamily="@font/caros"
                android:layout_below="@+id/tvTicketDes"
                android:textColor="@color/colorSmoothBlack"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:textSize="@dimen/_8ssp"
                android:layout_marginTop="@dimen/_5sdp"

                />



            <Spinner
                android:id="@+id/spinnerTicketQty"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_35sdp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/custom_spinner_bg"
                android:spinnerMode="dropdown"
                android:dropDownHeight="100dp"
                android:layout_alignBaseline="@+id/tvTicketDes"
                />


        </RelativeLayout>
    </LinearLayout>

</LinearLayout>