<?xml version="1.0" encoding="utf-8"?>

<layout>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        app:cardCornerRadius="@dimen/_4sdp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp">

        <RelativeLayout
            android:id="@+id/noPhotoContainer"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivUserImg"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:visibility="gone"/>


            <RelativeLayout
                android:id="@+id/showNameImgContainer"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/orange_circle">


            <TextView
                android:id="@+id/tvShortName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:text="EJ"
                android:textSize="@dimen/_20ssp"
                android:layout_centerInParent="true"
                android:textStyle="bold"/>
            </RelativeLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/tvShowUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/caros"
            android:textColor="@color/colorSmoothBlack"
            android:layout_toEndOf="@+id/noPhotoContainer"
            android:layout_toRightOf="@+id/noPhotoContainer"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/tvShowInviteMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invite_msg"
            android:textSize="@dimen/_10ssp"
            android:fontFamily="@font/caros"
            android:layout_toEndOf="@+id/noPhotoContainer"
            android:layout_toRightOf="@+id/noPhotoContainer"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_below="@+id/tvShowUserName"

            />

        <LinearLayout
            android:id="@+id/oneContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvShowInviteMsg"
            android:layout_alignStart="@+id/tvShowInviteMsg"
            android:layout_alignLeft="@+id/tvShowInviteMsg"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal">



            <Button
                android:id="@+id/btnAccept"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:background="@drawable/rectangular_btn_ripple_effect"
                android:text="@string/accept"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:layout_marginEnd="@dimen/_8sdp"
                android:visibility="gone"
                android:layout_marginRight="@dimen/_8sdp"

                />

            <Button
                android:id="@+id/btnReject"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:background="@drawable/rectangular_round_red_btn"
                android:text="@string/reject"
                android:textAllCaps="false"
                android:visibility="gone"
                android:textColor="@color/colorWhite"/>


            <Button
                android:id="@+id/btnAccepted"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:background="@drawable/rectangular_btn_ripple_effect"
                android:text="@string/accepted"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:textColor="@color/colorWhite"/>


            <TextView
                android:id="@+id/tvShowEgoTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ago_time"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/caros"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center_vertical"/>



        </LinearLayout>

        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>

</layout>