<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_230sdp"
        android:background="@drawable/login_round_container"
        android:layout_margin="@dimen/_16ssp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp">

            <TextView
                android:id="@+id/tvOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_title"
                android:textSize="@dimen/_18sdp"
                android:textColor="@color/colorSmoothBlack"
                android:fontFamily="@font/caros"
                android:maxLines="2"
                android:ellipsize="end"

                />


            <LinearLayout
                android:id="@+id/timeContainer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20sdp"
                android:orientation="horizontal"
                android:layout_below="@+id/tvOne"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_vertical"

                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/clock"
                    android:layout_gravity="center_vertical"
                    android:foregroundGravity="center_vertical"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/_date"
                    android:gravity="center_vertical"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_weight="1"
                    />

                <View
                    android:layout_width="@dimen/_1sdp"
                    android:layout_height="match_parent"
                    android:background="@color/light_gray"
                    android:layout_gravity="center_vertical"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/eventTime"
                    android:gravity="center_vertical"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_weight="1"

                    />



            </LinearLayout>


            <LinearLayout
                android:id="@+id/locationContainer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20sdp"
                android:orientation="horizontal"
                android:layout_below="@+id/timeContainer"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_vertical"


                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/pin"
                    android:layout_gravity="center_vertical"
                    android:foregroundGravity="center_vertical"/>


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/eventTime"
                    android:gravity="center_vertical"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="@dimen/_20sdp"
                android:orientation="horizontal"
                android:layout_below="@+id/locationContainer"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_vertical"


                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ticket"
                    android:layout_gravity="center_vertical"
                    android:foregroundGravity="center_vertical"/>


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/ticket_msg"
                    android:gravity="center_vertical"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_weight="1"/>

            </LinearLayout>






        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/transparentPurple"
            android:padding="@dimen/_12sdp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/total_price"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/colorSmoothBlack"
                android:fontFamily="@font/caros"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_weight="1"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rupee"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/caros"
                android:maxLines="2"
                android:ellipsize="end"/>


        </LinearLayout>



    </RelativeLayout>

</LinearLayout>